--- a/kubernetes/manifest.yml
+++ b/kubernetes/manifest.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: starbucks-container
-        image: aseemakram19/starbucks
+        image: samsorrahman/starbucks
         ports:
         - containerPort: 3000
 ---
